<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

    <ImageView
            android:id="@+id/img_logo"
            android:layout_width="126dp"
            android:layout_height="56dp"
            app:srcCompat="@mipmap/logo"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/field_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_text"
            android:layout_marginTop="90dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/edt_client"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:hint="@string/client_login"
                android:layout_marginStart="13dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:background="@null"
                android:textColorHint="#F6F6F6"
                android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/field_password"
            android:background="@drawable/shape_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/field_client"
            android:layout_marginTop="50dp"
            android:layout_marginStart="17dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:hint="@string/client_password"
                android:layout_marginStart="13dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:layout_gravity="center"
                android:textColorHint="#F6F6F6"
                android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btn_login"
            android:text="@string/btn_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="87dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="86dp"
            android:layout_marginBottom="36dp"
            style="@style/blueBtn"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="35dp"
            android:visibility="gone"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/field_password"
            android:layout_marginTop="32dp"/>

</android.support.constraint.ConstraintLayout>